<resources>
    <string name="app_name">Pediu, Chegou!</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email">Email</string>
    <string name="numero">Número</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="clique_aqui"> Clique aqui</string>
    <string name="login">Entrar</string>
    <string name="nome_cliente">Nome Cliente</string>
    <string name="novo_pedido">Novo Pedido</string>
    <string name="Exclamation">!</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="cart_o_cr_dito">Cartão Crédito</string>
    <string name="cart_o_debito">Cartão Debito</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="qual_o_endereco_de_entrega">Qual o endereco de entrega?</string>
    <string name="qual_ser_a_forma_de_pagamento">Qual será a forma de pagamento?</string>
    <string name="voc_vai_precisar_de_troco">Você vai precisar de troco?</string>
    <string name="email2">Email :</string>
    <string name="n_o_possui_cadastro">Não possui cadastro?</string>
    <string name="senha2">Senha :</string>
    <string name="fa_a_um_novo_pedido_aqui">Faça um novo pedido aqui !</string>

</resources>
